# synapse-sdk-python

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  synapse_memory.py
examples/: quickstart.py  requirements.txt
examples/basic/: main.py
scripts/: demo.py
synapse_layer/: __init__.py  a2a_client.py  client.py  crewai_tools.py  langchain_memory.py
synapse_layer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
synapse_layer/plugins/: __init__.py  base.py  medical_resolver.py
