[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-layer"
version = "2.4.1"
authors = [
  { name="Synapse Layer", email="founder.synapselayer@proton.me" },
]
description = "Python SDK for Synapse Layer — persistent memory infrastructure for AI agents, AES-256-GCM encrypted at rest."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
keywords = [
  "mcp",
  "memory",
  "ai-agents",
  "pgvector",
  "encryption",
  "persistent-memory",
  "python-sdk",
]
dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]

[project.urls]
"Homepage" = "https://synapselayer.org"
"Repository" = "https://github.com/SynapseLayer/synapse-sdk-python"
"Bug Tracker" = "https://github.com/SynapseLayer/synapse-sdk-python/issues"
"Documentation" = "https://synapselayer.org/docs"
"SDK Repository" = "https://github.com/SynapseLayer/synapse-sdk-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["synapse_layer*"]
